2006-09-29 fix line-breaking for SVG-inline images (purely cosmetic) - NN

2006-09-29 reworked set_linestyle and set_marker
	   markeredgecolor and markerfacecolor now default to
	   a special value "auto" that keeps the color in sync with
	   the line color
	   further, the intelligence of axes.plot is cleaned up,
	   improved and simplified. Complete compatibility cannot be
	   guaranteed, but the new behavior should be much more predictable
	   (see patch #1104615 for details) - NN

2006-09-29 changed implementation of clip-path in SVG to work around a
           limitation in inkscape - NN

2006-09-29 added two options to matplotlibrc:
	   svg.image_inline
	   svg.image_noscale
	   see patch #1533010 for details - NN

2006-09-29 axes.py: cleaned up kwargs checking - NN

2006-09-29 setup.py: cleaned up setup logic - NN

2006-09-29 setup.py: check for required pygtk versions, fixes bug #1460783 - SC

===============================================================
2006-09-27 Released 0.87.6 at revision 2783

2006-09-24 Added line pointers to the Annotation code, and a pylab
           interface.  See matplotlib.text.Annotation,
           examples/annotation_demo.py and
           examples/annotation_demo_pylab.py - JDH

2006-09-18 mathtext2.py: The SVG backend now supports the same things that
           the AGG backend does. Fixed some bugs with rendering, and out of
           bounds errors in the AGG backend - ES. Changed the return values
           of math_parse_s_ft2font_svg to support lines (fractions etc.)

2006-09-17 Added an Annotation class to facilitate annotating objects
           and an examples file examples/annotation_demo.py.  I want
           to add dash support as in TextWithDash, but haven't decided
           yet whether inheriting from TextWithDash is the right base
           class or if another approach is needed - JDH

===============================================================
2006-09-05 Released 0.87.5 at revision 2761
